--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <link type="text/css" rel="stylesheet"
-          href="bootstrap.min.css">
+          href="css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 20px;
