--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
-    <link type="text/css" rel="stylesheet"
-          href="css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" 
+          href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
       body {
         padding-top: 20px;
@@ -15,34 +15,34 @@
       }
       p.lead {
         padding-top: 15px;
-     }
-     .navigation, .pitch, .section1, .section2, .faq, .footer{
-       padding: 10px 0px 10px 0px; 
-     }
-     .video, .thermometer, .order, .social {
-       border: 1px dotted;
-       text-align: center;
-     }
-     .video {
-       /*Internal borders have 1px width, thus need to add 4x1px to 120px*/
-       height: 124px;
-       line-height: 124px;
-     }
-     .thermometer, .order, .social {
-       /*line-height to vertically center: bla*/
-       height: 40px;
-       line-height: 40px;
-     }
-     div.row {
-       border: 1px solid;
-     }
+      }
+      .navigation, .pitch, .section1, .section2, .faq, .footer {
+        padding: 10px 0px 10px 0px;
+      }
+      .video, .thermometer, .order, .social {
+        border: 1px dotted;
+        text-align: center;
+      }
+      .video {
+        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
+        height: 124px;
+        line-height: 124px;
+      }
+      .thermometer, .order, .social {
+        /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
+        height: 40px;
+        line-height: 40px;
+      }
+      div.row {
+        border: 1px solid;
+      }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="row navigation">
         <div class="span2 logo">
-         Logo
+          Logo
         </div>
         <div class="span6 blank">
           Blank
@@ -51,12 +51,12 @@
           About
         </div>
       </div>
-      <div class"row heading">
-        <div class"span12">
+      <div class="row heading">
+        <div class="span12">
           <h1>Bitstarter Title</h1>
         </div>
-      </div>
-      <div class="row subheading">
+      </div> 
+     <div class="row subheading">
         <div class="span12">
           <p class="lead">This is my first bitstarter project.</p>
         </div>
@@ -66,15 +66,15 @@
           Video
         </div>
         <div class="span6">
-         <div class="thermometer">
-           Thermometer
-         </div>
-         <div class="order">
-           Order
-         </div>
-         <div class="social">
-           Social
-         </div>
+          <div class="thermometer">
+            Thermometer
+          </div>
+          <div class="order">
+            Order
+          </div>
+          <div class="social">
+            Social
+          </div>
         </div>
       </div>
       <div class="row section1">
